Placér stikordsfilerne det rigtige sted.

--- a/Makefile.samling
+++ b/Makefile.samling
@@ -42,8 +42,8 @@ pakhtml: kun-fra-toplevel
 		ln -s ../../../$$dir/$$dir $$dir/$$dir; \
 		ln -s ../../../$$dir/eksempler $$dir/eksempler; \
 	done; \
+	cp ../../idx-* .; \
 	cd ..; \
-	cp ../idx-* .; \
 	tar hczf linuxbog-samling-html-$(version).tar.gz html-samling/
 	@tar hczf linuxbog-samling-htmlub-$(version).tar.gz $(addprefix html-samling/,$(join $(addsuffix /,$(SUBDIRSSAMLING)),$(addsuffix /*.html,$(SUBDIRSSAMLING)))) $(addprefix html-samling/,$(join $(addsuffix /,$(SUBDIRSSAMLING)),$(addsuffix /*.css,$(SUBDIRSSAMLING)))) $(addprefix html-samling/,$(addsuffix /eksempler,$(SUBDIRSSAMLING))) 
 	@echo 'Mon der er behov for en samling af billederne fra alle bøgerne?'
@@ -82,7 +82,6 @@ clean:
 #	rm -fr ps-samling
 	rm -fr pdf-samling
 	rm -fr html-samling
-	rm -f idx-*
 
 	rm -f linuxbog-samling-*.tar.gz
 
