Tag index.html og stikordsfilerne med i udgaven uden billeder.

--- a/Makefile.samling
+++ b/Makefile.samling
@@ -45,7 +45,7 @@ pakhtml: kun-fra-toplevel
 	cp ../../idx-* .; \
 	cd ..; \
 	tar hczf linuxbog-samling-html-$(version).tar.gz html-samling/
-	@tar hczf linuxbog-samling-htmlub-$(version).tar.gz $(addprefix html-samling/,$(join $(addsuffix /,$(SUBDIRSSAMLING)),$(addsuffix /*.html,$(SUBDIRSSAMLING)))) $(addprefix html-samling/,$(join $(addsuffix /,$(SUBDIRSSAMLING)),$(addsuffix /*.css,$(SUBDIRSSAMLING)))) $(addprefix html-samling/,$(addsuffix /eksempler,$(SUBDIRSSAMLING))) 
+	@tar hczf linuxbog-samling-htmlub-$(version).tar.gz $(addprefix html-samling/,$(join $(addsuffix /,$(SUBDIRSSAMLING)),$(addsuffix /*.html,$(SUBDIRSSAMLING)))) $(addprefix html-samling/,$(join $(addsuffix /,$(SUBDIRSSAMLING)),$(addsuffix /*.css,$(SUBDIRSSAMLING)))) $(addprefix html-samling/,$(addsuffix /eksempler,$(SUBDIRSSAMLING)))  html-samling/index.html html-samling/idx-*.html
 	@echo 'Mon der er behov for en samling af billederne fra alle bøgerne?'
 
 # Nej, jeg synes heller ikke den sidste tar-kommando er køn! .Henrik
