Placér index.html så den kommer med i pakkerne, og tag også forsidebilledet med.

--- a/Makefile.samling
+++ b/Makefile.samling
@@ -36,6 +36,8 @@ html:
 
 pakhtml: kun-fra-toplevel
 	mkdir -p html-samling; \
+	mv index.html html-samling; \
+	cp ../front.png html-samling; \
 	cd html-samling; \
 	for dir in $(SUBDIRSSAMLING); do \
 		mkdir -p $$dir; \
