Muliggør `make online` i linuxbog/

--- a/Makefile.in
+++ b/Makefile.in
@@ -105,8 +105,8 @@ reallyclean:	$(addsuffix /Makefile,$(SUBDIRS) $(SAMLING))
 # all, html, pdf, palmpilot, pakhtml
 # Makefilen her skal være uptodate, samt alle underbibliotekers Makefile skal 
 # være i orden.
-.PHONY : all html pdf pakhtml palmpilot eksempelbackup
-all html pdf pakhtml palmpilot eksempelbackup :	Makefile $(addsuffix /Makefile,$(SUBDIRS) $(SAMLING))
+.PHONY : all html pdf pakhtml palmpilot online eksempelbackup
+all html pdf pakhtml palmpilot online eksempelbackup :	Makefile $(addsuffix /Makefile,$(SUBDIRS) $(SAMLING))
 	bin/titleabstract.pl $(addsuffix /indhold.sgml,$(SUBDIRS) $(SAMLING)) > titleabstract.php
 	touch stikordsfiler;
 	@for dir in $(SUBDIRS); do \
