--- a/Makefile.samling
+++ b/Makefile.samling
@@ -2,7 +2,7 @@
 
 SUBDIRSSAMLING = @SUBDIRSSAMLING@
 
-# version - skal bruges til samlingerne (i øjeblikket kun palm)
+# version - skal bruges til samlingerne
 version:=$(shell (cd ../friheden; grep -A2 "<listitem>" apprevhist.sgml | head -n 2 | tail -n 1 | cut -d' ' -f2 > ../samling/version.sgml; cat ../samling/version.sgml))
 
 # html er unødvendigt
@@ -51,6 +51,9 @@ pakhtml: kun-fra-toplevel
 	@echo 'Mon der er behov for en samling af billederne fra alle bøgerne?'
 
 # Nej, jeg synes heller ikke den sidste tar-kommando er køn! .Henrik
+
+online:
+	@echo 'online giver ikke mening for samling'
 
 eksempelbackup:
 	@echo 'eksempelbackup target for samling-"bogen" er endnu ikke implementeret.'
