Vi prøver lige med en tidy på stiksordene.

--- a/Makefile.in
+++ b/Makefile.in
@@ -117,6 +117,7 @@ all html pdf pakhtml palmpilot online eksempelbackup :	Makefile $(addsuffix /Mak
 	done ;
 	@if [ -s stikordsfiler ]; then \
 		bin/splitstikord.pl `cat stikordsfiler`; \
+		tidy -latin1 -f err.txt -imu idx-*html; rm -f err.txt; \
 	fi
 	rm -f stikordsfiler
 	@if [ "x$(SAMLING)" != "x" ]; then \
