Ryd lidt mere op

--- a/Makefile.in
+++ b/Makefile.in
@@ -73,6 +73,7 @@ $(addsuffix /Makefile,$(SUBDIRS) $(SAMLING)):	$(BYGGE_FILER)
 # distclean
 # Cleaner i alle subdirs, så det passer til en dist
 distclean:	$(addsuffix /Makefile,$(SUBDIRS))
+	rm -f idx-?.html idx-symboler.html
 	@for dir in $(SUBDIRS) $(SAMLING) ; do \
 		echo "*** Kører make distclean i $$dir" && \
 		cd $$dir && $(MAKE) distclean && cd .. || exit ;\
@@ -83,6 +84,7 @@ distclean:	$(addsuffix /Makefile,$(SUBDIRS))
 # clean
 # cleaner i alle subdirs == tilbage til før bootstrap, stort set.
 clean:	$(addsuffix /Makefile,$(SUBDIRS) $(SAMLING))
+	rm -f idx-?.html idx-symboler.html
 	rm -f *.tar.gz *~
 	@for dir in $(SUBDIRS) $(SAMLING) ; do \
 		echo "*** Kører make $@ i $$dir" && \
@@ -94,6 +96,7 @@ clean:	$(addsuffix /Makefile,$(SUBDIRS) $(SAMLING))
 # reallyclean
 # reallycleaner i alle subdirs == tilbage til før bootstrap
 reallyclean:	$(addsuffix /Makefile,$(SUBDIRS) $(SAMLING))
+	rm -f idx-?.html idx-symboler.html
 	rm -f *.tar.gz *~
 	@for dir in $(SUBDIRS) $(SAMLING) ; do \
 		echo "*** Kører make $@ i $$dir" && \
