Skjul nogle flere genererede filer.

--- a/program/.cvsignore
+++ b/program/.cvsignore
@@ -1,4 +1,5 @@
 aclocal.m4
+addsubmitbox
 autom4te.cache
 bog
 bog.junk
@@ -8,14 +9,20 @@ config.log
 config.status
 configure
 configure.ac
+configure.log
 dato.sgml
+eksempler-sgml
+html.md5sums
 install-sh
+linuxbog.css
 linuxbog.spec
 linuxbogurl.sgml
 magic.sgml
 Makefile
 Makefile.am
 Makefile.in
+make_html.log
+make_palm.log
 misc
 missing
 mkinstalldirs
@@ -28,6 +35,3 @@ strukturovervejelser.dvi
 strukturovervejelser.log
 texput.log
 version.sgml
-addsubmitbox
-eksempler-sgml
-linuxbog.css
