--- a/admin/eksempler/etc/nagios/cgi.cfg
+++ b/admin/eksempler/etc/nagios/cgi.cfg
@@ -21,7 +21,8 @@ main_config_file=/etc/nagios/nagios.cfg
 # value is used to locate the logo images needed by the statusmap
 # and statuswrl CGIs.
 
-physical_html_path=/usr/local/nagios/share
+#physical_html_path=/usr/local/nagios/share
+physical_html_path=/usr/nagios/share
 
 
 
