--- a/admin/eksempler/etc/nagios/checkcommands.cfg
+++ b/admin/eksempler/etc/nagios/checkcommands.cfg
@@ -158,6 +158,18 @@ define command{
     command_line    $USER1$/check_ssh -H $HOSTADDRESS$ -p $ARG1$ -4
     }
 
+# 'check_sensors' command definition
+define command{
+    command_name    check_sensors
+    command_line    $USER1$/check_sensors
+    }
+
+# 'check_ntp' command definition
+define command{
+    command_name    check_ntp
+    command_line    $USER1$/check_ntp -H $HOSTADDRESS$
+    }
+
 
 ################################################################################
 #
