--- a/admin/eksempler/etc/nagios/contacts.cfg
+++ b/admin/eksempler/etc/nagios/contacts.cfg
@@ -1,23 +1,32 @@
 define contact{
-    contact_name                    root
-    alias                           Root
-    service_notification_period     24x7
-    host_notification_period        24x7
-    service_notification_options    c,r,w,u
-    host_notification_options       d,r,u
-    service_notification_commands   notify-by-email
-    host_notification_commands      host-notify-by-email
-    email                           root@localhost
-    }
+	name				generic-contact ; The name of this host template - referenced in other host definitions, used for template recursion/resolution
+	register			0   ; DONT REGISTER THIS DEFINITION - ITS NOT A REAL HOST, JUST A TEMPLATE!
+	service_notification_period	24x7 ; See timeperiods.cfg
+	host_notification_period	24x7 ; See timeperiods.cfg
+	service_notification_options	c,r,w,u ; [w,u,c,r,f,n]
+	host_notification_options	d,r,u ; [d,u,r,f,n]
+	service_notification_commands	notify-by-email ; See checkcommands.cfg
+	host_notification_commands	host-notify-by-email ; See checkcommands.cfg
+	}
 
 define contact{
-    contact_name                    nagios
-    alias                           Nagios user
-    service_notification_period     24x7
-    host_notification_period        24x7
-    service_notification_options    c,r,w,u
-    host_notification_options       d,r,u
-    service_notification_commands   notify-by-email
-    host_notification_commands      host-notify-by-email
-    email                           nagios@localhost
-    }
+	; Denne bruger anvender generic-contact.
+	; Husk: Alle direktiver kan stadig overskrives lokalt.
+	use				generic-contact
+	contact_name			root
+	alias				Root User
+	email				root@localhost
+	}
+
+define contact{
+	; Denne bruger har alle direktiver defineret lokalt.
+	contact_name			nagios
+	alias				Nagios user
+	email				nagios@localhost
+	service_notification_period	24x7
+	host_notification_period	24x7
+	service_notification_options	c,r,w,u
+	host_notification_options	d,r,u
+	service_notification_commands	notify-by-email
+	host_notification_commands	host-notify-by-email
+	}
