--- a/admin/eksempler/etc/nagios/hostgroups.cfg
+++ b/admin/eksempler/etc/nagios/hostgroups.cfg
@@ -1,5 +1,5 @@
 define hostgroup{
     hostgroup_name  admins
     alias           Admins
-    members         localhost,cvs.sslug.dk
+    members         localhost,cvs.sslug.dk,www.google.com
     }
