--- a/admin/eksempler/etc/nagios/nagios.cfg
+++ b/admin/eksempler/etc/nagios/nagios.cfg
@@ -16,7 +16,7 @@
 # for historical purposes.  This should be the first option specified 
 # in the config file!!!
 
-log_file=/usr/local/nagios/var/nagios.log
+log_file=/var/nagios/nagios.log
 
 
 
@@ -78,7 +78,7 @@ cfg_file=/etc/nagios/timeperiods.cfg
 # directly) in order to prevent inconsistencies that can occur
 # when the config files are modified after Nagios starts.
 
-object_cache_file=/usr/local/nagios/var/objects.cache
+object_cache_file=/var/nagios/objects.cache
 
 
 
@@ -101,7 +101,7 @@ resource_file=/etc/nagios/resource.cfg
 # The contents of the status file are deleted every time Nagios
 #  restarts.
 
-status_file=/usr/local/nagios/var/status.dat
+status_file=/var/nagios/status.dat
 
 
 
@@ -160,7 +160,7 @@ command_check_interval=-1
 # directory level instead of on the file, as the file is deleted every
 # time its contents are processed.
 
-command_file=/usr/local/nagios/var/rw/nagios.cmd
+command_file=/var/nagios/rw/nagios.cmd
 
 
 
@@ -168,7 +168,7 @@ command_file=/usr/local/nagios/var/rw/nagios.cmd
 # This is the file that Nagios will use for storing host and service
 # comments.
 
-comment_file=/usr/local/nagios/var/comments.dat
+comment_file=/var/nagios/comments.dat
 
 
 
@@ -176,7 +176,7 @@ comment_file=/usr/local/nagios/var/comments.dat
 # This is the file that Nagios will use for storing host and service
 # downtime data.
 
-downtime_file=/usr/local/nagios/var/downtime.dat
+downtime_file=/var/nagios/downtime.dat
 
 
 
@@ -184,7 +184,7 @@ downtime_file=/usr/local/nagios/var/downtime.dat
 # This is the lockfile that Nagios will use to store its PID number
 # in when it is running in daemon mode.
 
-lock_file=/usr/local/nagios/var/nagios.lock
+lock_file=/var/nagios/nagios.lock
 
 
 
@@ -194,7 +194,7 @@ lock_file=/usr/local/nagios/var/nagios.lock
 # is created, used, and deleted throughout the time that Nagios is
 # running.
 
-temp_file=/usr/local/nagios/var/nagios.tmp
+temp_file=/var/nagios/nagios.tmp
 
 
 
@@ -241,7 +241,7 @@ log_rotation_method=d
 # This is the directory where archived (rotated) log files should be 
 # placed (assuming you've chosen to do log rotation).
 
-log_archive_path=/usr/local/nagios/var/archives
+log_archive_path=/var/nagios/archives
 
 
 
@@ -507,7 +507,7 @@ retain_state_information=1
 # This file is used only if the preserve_state_information
 # variable is set to 1.
 
-state_retention_file=/usr/local/nagios/var/retention.dat
+state_retention_file=/var/nagios/retention.dat
 
 
 
@@ -853,7 +853,7 @@ high_host_flap_threshold=20.0
 #	strict-iso8601	(YYYY-MM-DDTHH:MM:SS)
 #
 
-date_format=us
+date_format=iso8601
 
 
 
@@ -862,7 +862,7 @@ date_format=us
 # embedded Perl interpreter) is located.  If you didn't compile
 # Nagios with embedded Perl support, this option has no effect.
 
-p1_file=/usr/local/nagios/bin/p1.pl
+p1_file=/usr/bin/p1.pl
 
 
 
