--- a/admin/eksempler/etc/nagios/servicegroups.cfg
+++ b/admin/eksempler/etc/nagios/servicegroups.cfg
@@ -2,7 +2,7 @@
 define servicegroup{
 	servicegroup_name	HTTP
 	alias			HyperText Transport Protocol
-	members			localhost,HTTP, cvs.sslug.dk,HTTP
+	members			localhost,HTTP, cvs.sslug.dk,HTTP, www.google.com,HTTP
 	}
 
 define servicegroup{
@@ -15,4 +15,17 @@ define servicegroup{
 	servicegroup_name	SSH
 	alias			Secure Shell
 	members			cvs.sslug.dk,SSH
+	}
+
+define servicegroup{
+	servicegroup_name	SMTP
+	alias			Simple Mail Transport Protocol
+	members			cvs.sslug.dk,SMTP
+	}
+
+; Herunder et eksempel på en overvågning der går på tværs
+define servicegroup{
+	servicegroup_name	TB
+	alias			Tyge Brahes tester noget
+	members			localhost,HTTP, cvs.sslug.dk,SMTP
 	}
