--- a/admin/eksempler/etc/nagios/hosts.cfg
+++ b/admin/eksempler/etc/nagios/hosts.cfg
@@ -1,35 +1,34 @@
 # Generic host definition template
 define host{
-	name                generic-host    ; The name of this host template - referenced in other host definitions, used for template recursion/resolution
-	notifications_enabled       1   ; Host notifications are enabled
-	event_handler_enabled       1   ; Host event handler is enabled
-	flap_detection_enabled      1   ; Flap detection is enabled
-	process_perf_data       1   ; Process performance data
-	retain_status_information   1   ; Retain status information across program restarts
-	retain_nonstatus_information    1   ; Retain non-status information across program restarts
-	register               0   ; DONT REGISTER THIS DEFINITION - ITS NOT A REAL HOST, JUST A TEMPLATE!
-	contact_groups         admins
-	check_command          check-host-alive
-	max_check_attempts     10
-	notification_interval  120
-	notification_period    24x7
-	notification_options   d,u,r
+	name			generic-host    ; The name of this host template - referenced in other host definitions, used for template recursion/resolution
+	register		0   ; DONT REGISTER THIS DEFINITION - ITS NOT A REAL HOST, JUST A TEMPLATE!
+	notifications_enabled	1   ; Host notifications are enabled
+	event_handler_enabled	1   ; Host event handler is enabled
+	flap_detection_enabled	1   ; Flap detection is enabled
+	process_perf_data	1   ; Process performance data
+	retain_status_information	1   ; Retain status information across program restarts
+	retain_nonstatus_information	1   ; Retain non-status information across program restarts
+	contact_groups		admins ; See contactgroups.cfg
+	check_command		check-host-alive
+	max_check_attempts	10
+	notification_interval	120
+	notification_period	24x7 ; See timeperiods.cfg
+	notification_options	d,u,r
 	}
 
 define host{
 	use             generic-host
-	host_name       localhost
+	host_name       localhost ; foo.example.com
 	alias           Local Host
-	address         127.0.0.1
-	check_command   check-host-alive
+	address         127.0.0.1 ; 44.55.66.77
 	}
 
 define hostextinfo{
 	host_name	localhost
-	notes		Den lokale vaert som Nagios er installeret paa
+	notes		Hvis ser denne besked, så bør du rette i /etc/nagios/hosts.cfg så der ikke står 'localhost', men det rigtige hostname for denne maskine. Ret også ip-nummer til det rigtige.
 	notes_url	http://localhost/
-	icon_image	localhost.png
-	icon_image_alt	Lokal vaert
+	;icon_image	localhost.png ; /var/www/nagios/html/images/logos/
+	;icon_image_alt	Lokalværten
 	2d_coords	50,50
    	}
 
@@ -38,16 +37,27 @@ define host{
 	host_name       cvs.sslug.dk
 	alias           SSLUG CVS
 	address         130.225.226.90
-	check_command   check-host-alive
 	}
 
 define hostextinfo{
 	host_name	cvs.sslug.dk
-	notes		Skaane Sjaelland Linux User Group, reserve-server
+	notes		Skåne Sjælland Linux User Group, reserve-server.
 	notes_url	http://cvs.sslug.dk/
 	action_url	http://www.sslug.dk/admin/systeminformation/
-	icon_image	sslug.png
-	icon_image_alt	SSLUG CVS
+	;icon_image	sslug.png ; /var/www/nagios/html/images/logos/
+	;icon_image_alt	SSLUG CVS
 	2d_coords	50,150
+   	}
+
+define host{
+	use             generic-host
+	host_name       www.google.com
+	alias           Google
+	}
+
+define hostextinfo{
+	host_name	www.google.com
+	notes		Google, en søgemaskine.
+	2d_coords	250,150
    	}
 
