--- a/admin/eksempler/etc/nagios/services.cfg
+++ b/admin/eksempler/etc/nagios/services.cfg
@@ -1,68 +1,99 @@
-# Generic service definition template
-define service{
-    name                            generic-service ; The 'name' of this service template, referenced in other service definitions
-    active_checks_enabled           1 ; Active service checks are enabled
-    passive_checks_enabled          1 ; Passive service checks are enabled/accepted
-    parallelize_check               1 ; Active service checks should be parallelized (disabling this can lead to major performance problems)
-    obsess_over_service             1   ; We should obsess over this service (if necessary)
-    check_freshness                 0   ; Default is to NOT check service 'freshness'
-    notifications_enabled           1   ; Service notifications are enabled
-    event_handler_enabled           1   ; Service event handler is enabled
-    flap_detection_enabled          1   ; Flap detection is enabled
-    process_perf_data               1   ; Process performance data
-    retain_status_information       1   ; Retain status information across program restarts
-    retain_nonstatus_information    1   ; Retain non-status information across program restarts
-    register                        0   ; DONT REGISTER THIS DEFINITION - ITS NOT A REAL SERVICE, JUST A TEMPLATE!
-    is_volatile             0
-    check_period            24x7
-    max_check_attempts      3
-    normal_check_interval   3
-    retry_check_interval    1
-    contact_groups          admins
-    notification_interval   120
-    notification_period     24x7
-    notification_options    w,u,c,r
-    }
+#	Generic service definition template
+define	service{
+	; Mandatory directives
+	name				generic-service ; The 'name' of this service template, referenced in other service definitions
+	register			0 ; DONT REGISTER THIS DEFINITION - ITS NOT A REAL SERVICE, JUST A TEMPLATE!
+        ; Required directives
+	max_check_attempts		5
+	normal_check_interval		5
+	retry_check_interval		3
+	check_period			24x7 ; See timeperiods.cfg
+	notification_interval		30 ; In minutes if "interval_length" is not changed
+	notification_period		24x7 ; See timeperiods.cfg
+	notification_options		w,c,r ; Warning, Critical, Recovery
+	contact_groups			admins ; See contactgroups.cfg
+	; Optional directives
+	;active_checks_enabled		1 ; Active service checks are enabled
+	;passive_checks_enabled		1 ; Passive service checks are enabled/accepted
+	;parallelize_check		1 ; Active service checks should be parallelized (disabling this can lead to major performance problems)
+	;obsess_over_service		1 ; We should obsess over this service (if necessary)
+	;check_freshness		0 ; Default is to NOT check service 'freshness'
+	;notifications_enabled		1 ; Service notifications are enabled
+	;event_handler_enabled		1 ; Service event handler is enabled
+	;flap_detection_enabled		1 ; Flap detection is enabled
+	;process_perf_data		1 ; Process performance data
+	;retain_status_information	1 ; Retain status information across program restarts
+	;retain_nonstatus_information	1 ; Retain non-status information across program restarts
+	;is_volatile			0
+	}
 
-define service{
-    use                     generic-service     ; Name of service template to use
-    host_name               localhost
-    service_description     PING
-    check_command           check_ping!100.0,20%!500.0,60%
-    }
+define	service{
+	use			generic-service     ; Name of service template to use
+	host_name		* ; All hosts gets a PING
+	service_description	PING
+	check_command		check_ping!100.0,20%!500.0,60%
+	}
 
-define service{
-    use                     generic-service     ; Name of service template to use
-    host_name               localhost
-    service_description     HTTP
-    check_command           check_http
-    }
+define	service{
+	use			generic-service
+	host_name		localhost
+	service_description	Load
+	check_command		check_local_load!2.0,1.5,1.2!3.0,2.5,2.0
+	}
 
-define service{
-    use                     generic-service     ; Name of service template to use
-    host_name               cvs.sslug.dk
-    service_description     PING
-    check_command           check_ping!100.0,20%!500.0,60%
-    }
+define	service{
+	use			generic-service
+	host_name		localhost
+	service_description	HTTP
+	check_command		check_http
+	}
 
-define service{
-    use                     generic-service
-    host_name               cvs.sslug.dk
-    service_description     SSH
-    check_command           check_ssh!22
-    }
+define	service{
+	use			generic-service
+	host_name		localhost
+	service_description	Sensor
+	check_command		check_sensors
+	}
 
-define service{
-    use                     generic-service     ; Name of service template to use
-    host_name               cvs.sslug.dk
-    service_description     HTTP
-    check_command           check_http
-    }
+define	service{
+	use			generic-service
+	host_name		localhost
+	service_description	Disk
+	check_command		check_local_disk!10%!5%!/
+	}
 
-define service{
-    use                     generic-service     ; Name of service template to use
-    host_name               cvs.sslug.dk
-    service_description     Telnet
-    check_command           check_telnet
-    }
+define	service{
+	use			generic-service
+	host_name		cvs.sslug.dk
+	service_description	SSH
+	check_command		check_ssh!22
+	}
+
+define	service{
+	use			generic-service
+	host_name		cvs.sslug.dk
+	service_description	HTTP
+	check_command		check_http
+	}
+
+define	service{
+	use			generic-service
+	host_name		cvs.sslug.dk
+	service_description	SMTP
+	check_command		check_smtp
+	}
+
+;define	service{
+;	use			generic-service
+;	host_name		cvs.sslug.dk
+;	service_description	Telnet
+;	check_command		check_telnet
+;	}
+
+define	service{
+	use			generic-service
+	host_name		www.google.com
+	service_description	HTTP
+	check_command		check_http
+	}
 
