--- a/admin/eksempler/etc/nagios/contactgroups.cfg
+++ b/admin/eksempler/etc/nagios/contactgroups.cfg
@@ -1,5 +1,5 @@
 define contactgroup{
-    contactgroup_name   admins
+    contactgroup_name   admins ; Used in services.cfg
     alias               Administrators
     members             root,nagios
     }
