--- a/admin/eksempler/etc/nagios/hostgroups.cfg
+++ b/admin/eksempler/etc/nagios/hostgroups.cfg
@@ -1,5 +1,11 @@
 define hostgroup{
     hostgroup_name  admins
     alias           Admins
-    members         localhost,cvs.sslug.dk,www.google.com
+    members         localhost,cvs.sslug.dk
+    }
+
+define hostgroup{
+    hostgroup_name  google
+    alias           Google servers
+    members         www.google.com, smtp1.google.com, smtp2.google.com, smtp3.google.com, smtp4.google.com
     }
