--- a/admin/eksempler/etc/nagios/hosts.cfg
+++ b/admin/eksempler/etc/nagios/hosts.cfg
@@ -1,19 +1,19 @@
 # Generic host definition template
 define host{
-	name			generic-host    ; The name of this host template - referenced in other host definitions, used for template recursion/resolution
-	register		0   ; DONT REGISTER THIS DEFINITION - ITS NOT A REAL HOST, JUST A TEMPLATE!
-	notifications_enabled	1   ; Host notifications are enabled
-	event_handler_enabled	1   ; Host event handler is enabled
-	flap_detection_enabled	1   ; Flap detection is enabled
-	process_perf_data	1   ; Process performance data
-	retain_status_information	1   ; Retain status information across program restarts
-	retain_nonstatus_information	1   ; Retain non-status information across program restarts
+	name			generic-host ; The name of this host template - referenced in other host definitions, used for template recursion/resolution
+	register		0 ; DONT REGISTER THIS DEFINITION - ITS NOT A REAL HOST, JUST A TEMPLATE!
+	notifications_enabled	1 ; Host notifications are enabled
+	event_handler_enabled	1 ; Host event handler is enabled
+	flap_detection_enabled	1 ; Flap detection is enabled
+	process_perf_data	1 ; Process performance data
+	retain_status_information	1 ; Retain status information across program restarts
+	retain_nonstatus_information	1 ; Retain non-status information across program restarts
 	contact_groups		admins ; See contactgroups.cfg
-	check_command		check-host-alive
+	check_command		check-host-alive ; See checkcommands.cfg
 	max_check_attempts	10
 	notification_interval	120
 	notification_period	24x7 ; See timeperiods.cfg
-	notification_options	d,u,r
+	notification_options	d,u,r ; [d,u,r,f]
 	}
 
 define host{
@@ -25,7 +25,7 @@ define host{
 
 define hostextinfo{
 	host_name	localhost
-	notes		Hvis ser denne besked, så bør du rette i /etc/nagios/hosts.cfg så der ikke står 'localhost', men det rigtige hostname for denne maskine. Ret også ip-nummer til det rigtige.
+	notes		Hvis du ser denne besked, så bør du rette i /etc/nagios/hosts.cfg så der ikke står 'localhost', men det rigtige hostname for denne maskine. Ret også ip-nummer til det rigtige.
 	notes_url	http://localhost/
 	;icon_image	localhost.png ; /var/www/nagios/html/images/logos/
 	;icon_image_alt	Lokalværten
@@ -60,4 +60,27 @@ define hostextinfo{
 	notes		Google, en søgemaskine.
 	2d_coords	250,150
    	}
+
+define host{
+	use             generic-host
+	host_name	smtp1.google.com
+	alias           Google SMTP 1
+	}
+	
+define host{
+	use             generic-host
+	host_name	smtp2.google.com
+	alias           Google SMTP 2
+	}
+define host{
+	use             generic-host
+	host_name	smtp3.google.com
+	alias           Google SMTP 3
+	}
+
+define host{
+	use             generic-host
+	host_name	smtp4.google.com
+	alias           Google SMTP 4
+	}
 
