--- a/admin/eksempler/etc/nagios/services.cfg
+++ b/admin/eksempler/etc/nagios/services.cfg
@@ -58,7 +58,7 @@ define	service{
 define	service{
 	use			generic-service
 	host_name		localhost
-	service_description	Disk
+	service_description	/ mount
 	check_command		check_local_disk!10%!5%!/
 	}
 
@@ -95,5 +95,33 @@ define	service{
 	host_name		www.google.com
 	service_description	HTTP
 	check_command		check_http
+	}
+
+define	service{
+	use			generic-service
+	host_name		smtp1.google.com
+	service_description	SMTP
+	check_command		check_smtp
+	}
+
+define	service{
+	use			generic-service
+	host_name		smtp2.google.com
+	service_description	SMTP
+	check_command		check_smtp
+	}
+
+define	service{
+	use			generic-service
+	host_name		smtp3.google.com
+	service_description	SMTP
+	check_command		check_smtp
+	}
+
+define	service{
+	use			generic-service
+	host_name		smtp4.google.com
+	service_description	SMTP
+	check_command		check_smtp
 	}
 
