--- a/admin/eksempler/etc/nagios/servicegroups.cfg
+++ b/admin/eksempler/etc/nagios/servicegroups.cfg
@@ -23,6 +23,12 @@ define servicegroup{
 	members			cvs.sslug.dk,SMTP
 	}
 
+define servicegroup{
+	servicegroup_name	Google SMTP
+	alias			Google Simple Mail Transport Protocol
+	members			smtp1.google.com,SMTP, smtp2.google.com,SMTP, smtp3.google.com,SMTP, smtp4.google.com,SMTP
+	}
+
 ; Herunder et eksempel på en overvågning der går på tværs
 define servicegroup{
 	servicegroup_name	TB
