Appendix "Elementer anvendt i denne bog" vises nu i en tabel hvor der er link til bogen selv, docbook.org og oreilly.com .
Ny fil: usedtags2sgml.pl
Programmet søger efter "docbook-<navn>" i docbook.sgml og laver så
et link til det id. Nogle id'er har jeg skrevet om, da de havde
forkerte navne (så jeg ikke kunne bruge dem).
Jeg håber ikke id'er blev brugt eksternt i anden sammenhæng.

--- a/dokumentation/Makefile_local
+++ b/dokumentation/Makefile_local
@@ -1,7 +1,8 @@
 # $Id$
 
 all: 
-	cat *.sgml | ./usedtags.pl | sort -nr > usedtags_now.sgml
+	#cat *.sgml | ./usedtags.pl | sort -nr > usedtags_now.sgml
+	cat *.sgml | ./usedtags.pl | sort -nr | ./usedtags2sgml.pl > usedtags_now.sgml
 
 clean:
 	rm -f usedtags_now.sgml
