--- a/dokumentation/Makefile.local
+++ b/dokumentation/Makefile.local
@@ -8,7 +8,7 @@ auto_sgml_filer:=$(auto_sgml_filer) $(dokumentation_auto_sgml_filer)
 
 # Regel for at lave sgml filer
 usedtags_now.sgml:	$(filter-out stikord.sgml,$(filter-out $(dokumentation_auto_sgml_filer),$(wildcard *.sgml)))
-	cat $(filter-out $(dokumentation_auto_sgml_filer),$(wildcard *.sgml)) | ./usedtags.pl | sort -nr > usedtags_now.sgml
+	cat $(filter-out $(dokumentation_auto_sgml_filer),$(wildcard *.sgml)) | ./usedtags.pl | sort -nr | ./usedtags2sgml.pl > usedtags_now.sgml
 
 ################################################################################
 #
