Friske demo filer

--- a/admin/eksempler/etc/nagios/contacts.cfg
+++ b/admin/eksempler/etc/nagios/contacts.cfg
@@ -5,21 +5,21 @@ define contact{
 	host_notification_period	24x7 ; See timeperiods.cfg
 	service_notification_options	c,r,w,u ; [w,u,c,r,f,n]
 	host_notification_options	d,r,u ; [d,u,r,f,n]
-	service_notification_commands	notify-by-email ; See checkcommands.cfg
-	host_notification_commands	host-notify-by-email ; See checkcommands.cfg
+	service_notification_commands	notify-by-email ; See misccommands.cfg
+	host_notification_commands	host-notify-by-email ; See misccommands.cfg
 	}
 
+; Denne bruger anvender generic-contact.
+; Husk: Alle direktiver kan stadig overskrives lokalt.
 define contact{
-	; Denne bruger anvender generic-contact.
-	; Husk: Alle direktiver kan stadig overskrives lokalt.
 	use				generic-contact
 	contact_name			root
 	alias				Root User
 	email				root@localhost
 	}
 
+; Denne bruger har alle direktiver defineret lokalt.
 define contact{
-	; Denne bruger har alle direktiver defineret lokalt.
 	contact_name			nagios
 	alias				Nagios user
 	email				nagios@localhost
