--- a/admin/eksempler/etc/nagios/hosts.cfg
+++ b/admin/eksempler/etc/nagios/hosts.cfg
@@ -27,9 +27,11 @@ define hostextinfo{
 	host_name	localhost
 	notes		Hvis du ser denne besked, så bør du rette i /etc/nagios/hosts.cfg så der ikke står 'localhost', men det rigtige hostname for denne maskine. Ret også ip-nummer til det rigtige.
 	notes_url	http://localhost/
-	;icon_image	localhost.png ; /var/www/nagios/html/images/logos/
+	; Hent logo fra: http://www.nagiosexchange.org/Image_Packs.75.0.html
+	; Logo lægges i: /var/www/nagios/html/images/logos/
+	;icon_image	FileServer.png
 	;icon_image_alt	Lokalværten
-	2d_coords	50,50
+	;2d_coords	50,50
    	}
 
 define host{
@@ -48,39 +50,4 @@ define hostextinfo{
 	;icon_image_alt	SSLUG CVS
 	2d_coords	50,150
    	}
-
-define host{
-	use             generic-host
-	host_name       www.google.com
-	alias           Google
-	}
-
-define hostextinfo{
-	host_name	www.google.com
-	notes		Google, en søgemaskine.
-	2d_coords	250,150
-   	}
-
-define host{
-	use             generic-host
-	host_name	smtp1.google.com
-	alias           Google SMTP 1
-	}
-	
-define host{
-	use             generic-host
-	host_name	smtp2.google.com
-	alias           Google SMTP 2
-	}
-define host{
-	use             generic-host
-	host_name	smtp3.google.com
-	alias           Google SMTP 3
-	}
-
-define host{
-	use             generic-host
-	host_name	smtp4.google.com
-	alias           Google SMTP 4
-	}
 
