--- a/admin/eksempler/etc/nagios/servicegroups.cfg
+++ b/admin/eksempler/etc/nagios/servicegroups.cfg
@@ -2,7 +2,7 @@
 define servicegroup{
 	servicegroup_name	HTTP
 	alias			HyperText Transport Protocol
-	members			localhost,HTTP, cvs.sslug.dk,HTTP, www.google.com,HTTP
+	members			localhost,HTTP, cvs.sslug.dk,HTTP
 	}
 
 define servicegroup{
@@ -14,7 +14,7 @@ define servicegroup{
 define servicegroup{
 	servicegroup_name	SSH
 	alias			Secure Shell
-	members			cvs.sslug.dk,SSH
+	members			localhost,SSH, cvs.sslug.dk,SSH
 	}
 
 define servicegroup{
@@ -23,15 +23,3 @@ define servicegroup{
 	members			cvs.sslug.dk,SMTP
 	}
 
-define servicegroup{
-	servicegroup_name	Google SMTP
-	alias			Google Simple Mail Transport Protocol
-	members			smtp1.google.com,SMTP, smtp2.google.com,SMTP, smtp3.google.com,SMTP, smtp4.google.com,SMTP
-	}
-
-; Herunder et eksempel på en overvågning der går på tværs
-define servicegroup{
-	servicegroup_name	TB
-	alias			Tyge Brahes tester noget
-	members			localhost,HTTP, cvs.sslug.dk,SMTP
-	}
