--- a/admin/eksempler/etc/nagios/services.cfg
+++ b/admin/eksempler/etc/nagios/services.cfg
@@ -51,14 +51,21 @@ define	service{
 define	service{
 	use			generic-service
 	host_name		localhost
-	service_description	Sensor
-	check_command		check_sensors
+	service_description	SSH
+	check_command		check_ssh!22
 	}
+
+;define	service{
+;	use			generic-service
+;	host_name		localhost
+;	service_description	Sensor
+;	check_command		check_sensors
+;	}
 
 define	service{
 	use			generic-service
 	host_name		localhost
-	service_description	/ mount
+	service_description	mount /
 	check_command		check_local_disk!10%!5%!/
 	}
 
@@ -89,39 +96,4 @@ define	service{
 ;	service_description	Telnet
 ;	check_command		check_telnet
 ;	}
-
-define	service{
-	use			generic-service
-	host_name		www.google.com
-	service_description	HTTP
-	check_command		check_http
-	}
-
-define	service{
-	use			generic-service
-	host_name		smtp1.google.com
-	service_description	SMTP
-	check_command		check_smtp
-	}
-
-define	service{
-	use			generic-service
-	host_name		smtp2.google.com
-	service_description	SMTP
-	check_command		check_smtp
-	}
-
-define	service{
-	use			generic-service
-	host_name		smtp3.google.com
-	service_description	SMTP
-	check_command		check_smtp
-	}
-
-define	service{
-	use			generic-service
-	host_name		smtp4.google.com
-	service_description	SMTP
-	check_command		check_smtp
-	}
 
