--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -113,9 +113,11 @@ stikord.sgml:	$(filter-out version.sgml stikord.sgml ,$(dep_sgml_filer))
 		echo '<!ENTITY magic "png">' > magic.sgml ; \
 	fi
 	make version.sgml
-	collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml && \
+	echo "<?xml version='1.0' encoding='ISO-8859-1' ?>" > stikord.sgml && \
+	collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N >> stikord.sgml && \
 	jw -V %use-id-as-filename% -V html-index -f docbook -b html -o StikordBuildDir bog.sgml && \
-	collateindex.pl -s Symboler -t Stikordsregister -g -i stikord -o stikord.sgml StikordBuildDir/HTML.index
+	echo "<?xml version='1.0' encoding='ISO-8859-1' ?>" > stikord.sgml && \
+	collateindex.pl -s Symboler -t Stikordsregister -g -i stikord >> stikord.sgml StikordBuildDir/HTML.index
 
 stikord.sgml.clean:	
 	rm -f stikord.sgml
