--- a/admin/eksempler/etc/nagios/checkcommands.cfg
+++ b/admin/eksempler/etc/nagios/checkcommands.cfg
@@ -170,6 +170,17 @@ define command{
     command_line    $USER1$/check_ntp -H $HOSTADDRESS$
     }
 
+# 'check_http_string' command definition
+define command{
+    command_name    check_http_string
+    command_line    $USER1$/check_http -H $ARG1$ -w $ARG2$ -c $ARG3$ -s "$ARG4$"
+    }
+
+# 'check_http_url_string' command definition
+define command{
+    command_name    check_http_url_string
+    command_line    $USER1$/check_http -H $ARG1$ -u $ARG2$ -w $ARG3$ -c $ARG4$ -s "$ARG5$"
+    }
 
 ################################################################################
 #
